--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
+    "proxyquire": "^2.1.3",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
+    "sequelize-mock": "^0.10.2",
     "sinon": "^9.2.0",
     "supertest": "^5.0.0"
   }
